<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".TentangZakat">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:text="Zakat Fitrah"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:columnCount="1"
        android:rowCount="1"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/text1"
                    android:layout_below="@+id/scroll"
                    android:layout_alignRight="@+id/scroll"
                    android:layout_alignEnd="@+id/scroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pengertian" />
                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/zakat"
                    android:layout_below="@+id/text1"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img"
                    android:text="@string/syarat"
                    android:id="@+id/text2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text2"
                    android:id="@+id/text3"
                    android:text="@string/waktu"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text3"
                    android:id="@+id/text4"
                    android:text="@string/penerima"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text4"
                    android:id="@+id/text5"
                    android:text="@string/wajib"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text5"
                    android:id="@+id/text6"
                    android:text="\n\n6. Firman Allah Tentang Perintah Berzakat"
                    />
                <ImageView
                    android:id="@+id/image"
                    android:layout_below="@+id/text6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/surah"/>

            </LinearLayout>
    </ScrollView>

        </android.support.v7.widget.CardView>




        </GridLayout>

</LinearLayout>